# vmarker

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-to-hf.yml
backend/: .dockerignore  CLI_USAGE.md  Dockerfile  pyproject.toml
backend/src/vmarker/: chapter_bar.py  cli.py  progress_bar.py  video_composer_parallel.py  video_encoder.py
backend/src/vmarker/api/: main.py
backend/src/vmarker/api/routes/: auth.py  chapter_bar.py  progress_bar.py  video.py
backend/tests/: test_video_composer_parallel.py
benchmark-output/: BENCHMARK_REPORT.md
examples/: app.py  main.py
readme/: compose-parallel-design.md
scripts/: benchmark-compose-smoke.sh  benchmark-compose.py
src/chapterbar/: __init__.py  chapter_extractor.py  chapter_loader.py  chapter_validator.py  cli.py  generator.py  interactive_editor.py  logger.py  parser.py
tests/: test_chapter_extractor.py  test_parser.py
web/: .dockerignore  Dockerfile  package.json
web/src/components/auth/: LoginDialog.tsx  UserMenu.tsx  index.ts
web/src/lib/: supabase.ts
