[project]
name = "vmarker"
version = "0.1.0"
description = "Video Marker - 视频标记工具集，让视频结构可见"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["video", "subtitle", "srt", "chapter", "progress-bar", "ffmpeg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "pillow>=11.0.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.0",
    "yt-dlp>=2024.0.0",
    "youtube-transcript-api>=0.6.0",
    "python-jose[cryptography]>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
# Chapter Bar 专用入口
acb = "vmarker.cli:acb_app"
# 通用入口（子命令）
vmarker = "vmarker.cli:app"
vmk = "vmarker.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
